--- a/src/scss/shared/_alignment.scss
+++ b/src/scss/shared/_alignment.scss
@@ -13,8 +13,11 @@
 		width: 100%;
 
 		@include media($tablet-large) {
-			margin-left: 50%;
-			transform: translateX(-50%);
+			left: 50%;
+			margin-left: calc(-50vw + 37.5%);
+			margin-right: calc(-50vw + 37.5%);
+			position: relative;
+			right: 50%;
 			width: calc(100vw - 75%);
 		}
 	}
@@ -25,8 +28,11 @@
 		width: 100%;
 
 		@include media($tablet-large) {
-			margin-left: 50%;
-			transform: translateX(-50%);
+			left: 50%;
+			margin-left: calc(-50vw + #{$gutter});
+			margin-right: calc(-50vw + #{$gutter});
+			position: relative;
+			right: 50%;
 			width: calc(100vw - #{$gutter * 2});
 		}
 
